logout button changedd and navbar collapse fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,30 @@ header {
   opacity: 0.9;
   color: white !important;
 }
+.small-logout-btn {
+  display: none;
+  position: absolute;
+  bottom: 5px;
+  left: 0px;
+  width: 98%;
+  font-family: "Montserrat", sans-serif;
+  background: linear-gradient(to top, #b83b3b, #114070);
+  color: white !important;
+  border: none;
+  padding: 0.75em 1.5em;
+  font-weight: 600;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  font-family: "Montserrat", sans-serif;
+  transition: background 0.3s ease;
+}
+
+.small-logout-btn:hover {
+  background: linear-gradient(to bottom, #b83b3b, #0d3050);
+  opacity: 0.9;
+  color: white !important;
+}
 
 .list-group {
   width: 240px;
@@ -85,6 +109,7 @@ header {
 }
 .sidebar-expanded {
   width: 250px;
+  position: relative;
 }
 
 .list-group {
@@ -133,12 +158,19 @@ header {
   width: 10px;
   margin-right: 2px;
 }
-
 /*+++++++++++++++++++++++++++++++ Media query starts ++++++++++++++++++++++++++++++ */
+@media (max-width: 479px) {
+  .navbar-collapse {
+    display: none;
+  }
+}
+
 @media (min-width: 767px) {
+  .small-logout-btn {
+    display: none;
+  }
   .navbar-collapse{
-    display: flex ;
-    justify-content: end;
+    display: none;
   }
   .sidebar-expanded {
     margin-left: 0px;
@@ -155,9 +187,15 @@ header {
 }
 
 @media (min-width: 992px) {
+  .small-logout-btn {
+    display: none;
+  }
+  .list-group{
+    padding-top: 0px;
+  }
   .navbar-collapse{
   display: flex ;
-  justify-content: end;
+  justify-content:flex-end;
 }
   .sidebar-expanded {
     margin-left: -280px;
@@ -166,6 +204,7 @@ header {
     display: block;
   }
 }
+
 /*+++++++++++++++++++++++++++++++ Media query ends ++++++++++++++++++++++++++++++ */
 
 /****************************** Table section ***************************** */
